enums2/stdout.txt
Checking test execution result...
[!] Test execution result: FAILED
Checking source code format...
  Preparing source code for format check...
  Running format check...
// =====================================================
//  Running cargo fmt...
// =====================================================

// =====================================================
//    Running cargo clippy...
// =====================================================

    Checking format_check v0.1.0 (/home/runner/work/rustlings-wakaise/rustlings-wakaise/format_check)
error[E0599]: no variant named `Move` found for enum `Message`
  --> src/lib.rs:21:18
   |
9  | enum Message {
   | ------------ variant `Move` not found here
...
21 |         Message::Move { x: 10, y: 30 },
   |                  ^^^^ variant not found in `Message`

error[E0599]: no variant or associated item named `Echo` found for enum `Message` in the current scope
  --> src/lib.rs:22:18
   |
9  | enum Message {
   | ------------ variant or associated item `Echo` not found for this enum
...
22 |         Message::Echo(String::from("hello world")),
   |                  ^^^^ variant or associated item not found in `Message`

error[E0599]: no variant or associated item named `ChangeColor` found for enum `Message` in the current scope
  --> src/lib.rs:23:18
   |
9  | enum Message {
   | ------------ variant or associated item `ChangeColor` not found for this enum
...
23 |         Message::ChangeColor(200, 255, 255),
   |                  ^^^^^^^^^^^ variant or associated item not found in `Message`

error[E0599]: no variant or associated item named `Quit` found for enum `Message` in the current scope
  --> src/lib.rs:24:18
   |
9  | enum Message {
   | ------------ variant or associated item `Quit` not found for this enum
...
24 |         Message::Quit,
   |                  ^^^^ variant or associated item not found in `Message`

For more information about this error, try `rustc --explain E0599`.
error: could not compile `format_check` (lib) due to 4 previous errors

[!] Source code format check: FAILED
